# linux

./: .gitignore  Cargo.toml  write-uefi-boot
crates/capellix/: Cargo.toml
crates/capellix/src/: atomic_changed.rs  lib.rs  then.rs
crates/capellix/src/hid/: command.rs  mod.rs  mode.rs  request.rs  state.rs
crates/capellix/src/thread/: capellix.rs  capellixctl.rs  mod.rs  pump_target.rs  server_thread.rs
crates/capellix/src/thread/socket/: mod.rs  socket_command.rs  socket_response.rs
crates/fans/: Cargo.toml
crates/fans/src/: app.rs  fan.rs  hwmon.rs  hwmon_entry.rs  main.rs  pwm.rs  temp.rs
crates/hotas/: Cargo.toml
crates/hotas/src/: main.rs
crates/pid_controller/: Cargo.toml
crates/pid_controller/src/: lib.rs
crates/retroarch-launcher/: Cargo.toml
crates/retroarch-launcher/src/: main.rs
crates/rgb/: Cargo.toml
crates/rgb/src/: main.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: main.rs
crates/swayex/: Cargo.toml
crates/swayex/src/: main.rs
crates/tgm3-keys/: Cargo.toml
crates/tgm3-keys/src/: main.rs
crates/workflow/: Cargo.toml
crates/workflow-run/: Cargo.toml
crates/workflow-run/src/: main.rs
crates/workflow/src/: lib.rs
