[package]
name = "capellix"
version = "0.2.0"
edition = "2021"

[dependencies]
hidapi = "1.4.1"
anyhow = "1.0.56"
parking_lot = "0.12.0"
inotify = "0.10.0"
nom = "7.1.1"
log = "0.4.16"
env_logger = "0.9.0"
futures = "0.3.21"
bytes = "1.1.0"

clap = { version = "3.1.6", features = ["derive"] }
tokio = { version = "1.17.0", features = ["rt", "rt-multi-thread", "fs", "net", "io-util", "time", "signal"] }
tokio-stream = { version = "0.1.8", features = ["net", "sync", "signal"] }
tokio-util = { version = "0.7.1", features = ["net", "codec"] }
