[package]
name = "fans"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.16"
env_logger = "0.9.0"
anyhow = "1.0.57"
futures = "0.3.21"

tokio = { version = "1.18.0", features = [ "rt", "rt-multi-thread", "fs", "signal" ] }
tokio-stream = { version = "0.1.8", features = [ "signal", "fs" ] }
clap = { version = "3.1.10", features = [ "derive" ] }
pid_controller = { path = "../pid_controller" }
