[package]
name = "hotas"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"
anyhow = "1.0.57"
futures = "0.3.21"
uinput-tokio = "0.1.35"

tokio = { version = "1.18.2", features = ["rt", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1.8", features = ["signal", "sync"] }
evdev = { version = "0.11.4", features = [ "tokio" ] }
